--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ description: Arda Ozkurt's Personal Website
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+show_downloads: true
