--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ show_downloads: true
 github:
   zip_url: http://example.com/download.zip
   another_url: another value
-  is_project_page : https://www.hepsiburada.com/
+  is_project_page : ardaozkurt.github.io/ardaozkurt
  
   
