--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ theme: jekyll-theme-cayman
 show_downloads: true
 github:
   zip_url: https://www.hepsiburada.com/
-  another_url: another value
+  another_url: https://lichess.org/
   is_project_page : https://github.com/ardaozkurt
   
