--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arda Ozkurt's Personal Website
-description: Arda Ozkurt's Personal Website
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
